scooter/tests/snapshots/app_runner__preview_escape_off_multiline_off.snap
---
source: scooter/tests/app_runner.rs
expression: snapshot.as_ref()
---
                                                                                scooter                                                                               
       ┌Search text─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐        
       │world                                                                                                                                               │        
       └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘        
       ┌Replace text────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐        
       │foo\nbar                                                                                                                                            │        
       └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘        
                                                                                                                                                                     
       Results: 1 [Search complete]                                                                                                     [Time taken: TIME]         
                                                                                                                                                                     
       [x] file1.txt:1                                          (1) - hello world                                                                                    
                                                                    + hello foo\nbar                                                                                 
                                                                      another line                                                                                   
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                  <space> toggle / <esc> back to search fields / <enter> replace selected / <C-h> help / <C-c> quit
