scooter/tests/snapshots/app_runner__replacement_results.snap
---
source: scooter/tests/app_runner.rs
expression: normalize_paths(&snapshot)
---
                                                     Scooter                                                     
     ┌Successful replacements (lines):───────────────────────────────────────────────────────────────────┐      
     │1                                                                                                  │      
     └───────────────────────────────────────────────────────────────────────────────────────────────────┘      
     ┌Ignored (lines):───────────────────────────────────────────────────────────────────────────────────┐      
     │2                                                                                                  │      
     └───────────────────────────────────────────────────────────────────────────────────────────────────┘      
     ┌Errors:────────────────────────────────────────────────────────────────────────────────────────────┐      
     │6                                                                                                  │      
     └───────────────────────────────────────────────────────────────────────────────────────────────────┘      
     Errors:                                                                                                    
                                                                                                                
     ./src/foo.rs:3                                   
     No such file or directory (os error 2)                                                                     
                                                                                                                
     ./src/foo.rs:4                                   
     No such file or directory (os error 2)                                                                     
                                                                                                                
     ./src/lib.rs:2                                   
     No such file or directory (os error 2)                                                                     
                                                                                                                
     ./src/lib.rs:3                                   
     No such file or directory (os error 2)                                                                     
                                                                                                                
     ./src/lib.rs:4                                   
     No such file or directory (os error 2)                                                                     
                                                                                                                
     ./src/lib.rs:6                                   
     No such file or directory (os error 2)                                                                     
                                                                                                                
                                                                                                                
                                                                                                                
                                                                                                                
                           <j> down / <k> up / <C-r> reset / <C-h> help / <esc> quit
