scooter/tests/snapshots/app_runner__search_fields_help_screen_closed.snap
---
source: scooter/tests/app_runner.rs
expression: snapshot
---
                                               scooter                                              
    ┌Search text─────────────────────────────────────────────────────────────────────────────┐     
    │                                                                                        │     
    └────────────────────────────────────────────────────────────────────────────────────────┘     
    ┌Replace text────────────────────────────────────────────────────────────────────────────┐     
    │                                                                                        │     
    └────────────────────────────────────────────────────────────────────────────────────────┘     
    ┌───┐                                                                                          
    │   │ Fixed strings                                                                            
    └───┘                                                                                          
    ┌───┐                                                                                          
    │   │ Match whole word                                                                         
    └───┘                                                                                          
    ┌───┐                                                                                          
    │ X │ Match case                                                                               
    └───┘                                                                                          
    ┌Files to include────────────────────────────────────────────────────────────────────────┐     
    │                                                                                        │     
    └────────────────────────────────────────────────────────────────────────────────────────┘     
    ┌Files to exclude────────────────────────────────────────────────────────────────────────┐     
    │                                                                                        │     
    └────────────────────────────────────────────────────────────────────────────────────────┘     
                                                                                                   
    Results: 0 [Search is empty]                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
        <enter> jump to results / <tab> focus next / <C-r> reset / <C-h> help / <C-c> quit
